--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
         run: ls
         
       - name: Read yaml
+        id: yaml
         # You may pin to the exact commit or the version.
         # uses: KJ002/read-yaml@a01a7dc2d3e912f62086236a95dbba004775e07b
         uses: KJ002/read-yaml@1.5
@@ -48,7 +49,7 @@ jobs:
           key-path: '["version"]'
           
       - name: Print version
-        run: echo ${{steps.var.outputs.data}}
+        run: echo ${{steps.yaml.outputs.data}}
           
       - name: Upload artifact
         uses: actions/upload-artifact@v2.3.0
